#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(SystemC-VPC, 0.6, streubuehr@cs.fau.de)
AC_PREREQ(2.57)
ACJF_INIT

AC_CONFIG_SRCDIR([hscd_vpc_Director.cpp])
AC_CONFIG_AUX_DIR([../BuildSystem])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

dnl Checks for programs.
ACJF_CHECK_CROSSTOOL( CC, gcc)
ACJF_CHECK_CROSSTOOL( CXX, g++)
ACJF_CHECK_CROSSTOOL( AR, ar)
ACJF_CHECK_CROSSTOOL( RANLIB, ranlib)
ACJF_CHECK_CROSSTOOL( NM, nm)
AC_PROG_CXXCPP
AC_PROG_CPP
# Checks for programs.
#AC_PROG_LIBTOOL
#AC_PROG_INSTALL
#AC_PROG_LN_S
#AC_PROG_MAKE_SET

ACJF_ARG_DEBUG([yes], [], [-DNDEBUG])

AM_INIT_AUTOMAKE
AC_CONFIG_HEADER([config.h])

DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(ON)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(ON)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN([SystemC-VPC--mainline], [doxygen.cfg], [doxygen-doc])

AC_DISABLE_SHARED
AM_PROG_LIBTOOL

dnl check for exe extension
AC_EXEEXT

# Checks for header files.
# AC_FUNC_ALLOCA
# AC_HEADER_STDC
# AC_CHECK_HEADERS([OS.h fcntl.h limits.h mach/mach.h malloc.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

ACJF_CHECK_LIB_SYSTEMC
ACJF_CHECK_LIB_XERCES
ACJF_NEED_PKG([Support])

AC_CONFIG_FILES([Makefile])

ACJF_DONE

AC_OUTPUT
