#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(
 [SystemC-VPC], [1.0],
 [sebastian.graf@informatik.uni-erlangen.de],
 [SystemC-VPC--devel-])
AC_PREREQ(2.57)
ACJF_INIT

AC_CONFIG_SRCDIR([Director.cpp])
AC_CONFIG_AUX_DIR([../BuildSystem])
AC_CONFIG_MACRO_DIR([../BuildSystem/m4])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

dnl Checks for programs.
ACJF_CHECK_CROSSTOOL( CC, gcc)
ACJF_CHECK_CROSSTOOL( CXX, g++)
ACJF_CHECK_CROSSTOOL( AR, ar)
ACJF_CHECK_CROSSTOOL( RANLIB, ranlib)
ACJF_CHECK_CROSSTOOL( NM, nm)
AC_PROG_CXXCPP
AC_PROG_CPP
# Checks for programs.
#AC_PROG_LIBTOOL
#AC_PROG_INSTALL
#AC_PROG_LN_S
#AC_PROG_MAKE_SET

AC_DISABLE_SHARED
AC_PROG_LIBTOOL

ACJF_ARG_DEBUG([yes], [], [-DNDEBUG])

AM_INIT_AUTOMAKE
AC_CONFIG_HEADER([config.h pkginclude/systemcvpc/vpc_config.h])

DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(ON)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(ON)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN("AC_PACKAGE_NAME", [doxygen.cfg], [doxygen-doc])

dnl check for exe extension
AC_EXEEXT

# Checks for header files.
# AC_FUNC_ALLOCA
# AC_HEADER_STDC
# AC_CHECK_HEADERS([OS.h fcntl.h limits.h mach/mach.h malloc.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

ACJF_CHECK_LIB_BOOST
ACJF_CHECK_LIB_SYSTEMC
ACJF_CHECK_LIB_XERCES
ACJF_CHECK_LIB_COSUPPORT_SYSTEMC
ACJF_CHECK_LIB_COSUPPORT_TRACING
ACJF_CHECK_LIB_COSUPPORT_STREAMS

### VPC power tracing  ###
# --enable-power-tracing option
AC_ARG_ENABLE(
 [power-tracing],
 [[  --enable-power-tracing  enable power tracing for VPC [default=no]]],
 [case "$enableval" in
    yes)  enable_power_tracing=yes  ;;
    no)   enable_power_tracing=no   ;;
    *)    AC_MSG_ERROR(bad value ${enableval} for --enable-power-tracing) ;;
  esac],
 [enable_power_tracing=no #default]
)

AM_CONDITIONAL([NO_POWER_SUM], [test x"$enable_power_tracing" = x"no"])
# This is a define for pkginclude/systemcvpc/vpc_config.h to guarantee
# consistency for Examples and Testcases
if test x"$enable_power_tracing" = x"no"; then
  AC_DEFINE([NO_POWER_SUM], [yes], [Define to suppress power tracing for VPC])
fi

### VPC vcd tracing ###
# --enable-vcd-tracing option
AC_ARG_ENABLE(
 [vcd-tracing],
 [[  --enable-vcd-tracing    enable vcd tracing for VPC [default=yes]]],
 [case "$enableval" in
    yes)  enable_vcd_tracing=yes  ;;
    no)   enable_vcd_tracing=no   ;;
    *)    AC_MSG_ERROR(bad value ${enableval} for --enable-vcd-tracing) ;;
  esac],
 [enable_vcd_tracing=yes #default]
)

AM_CONDITIONAL([NO_VCD_TRACES], [test x"$enable_vcd_tracing" = x"no"])
# This is a define for pkginclude/systemcvpc/vpc_config.h to guarantee
# consistency for Examples and Testcases
if test x"$enable_vcd_tracing" = x"no"; then
  AC_DEFINE([NO_VCD_TRACES], [yes], [Define to suppress vcd tracing for VPC])
fi

AC_CONFIG_FILES([
  Makefile
  pkginclude/Makefile
  pkgconfig/libsystemcvpc.pc
])

ACJF_DONE

AC_OUTPUT
