## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS =

nobase_include_HEADERS = \
	systemcvpc/Attribute.h \
	systemcvpc/hscd_vpc_datatypes.h \
	systemcvpc/hscd_vpc_PriorityController.h \
	systemcvpc/hscd_vpc_Term.h \
	systemcvpc/FastLink.h \
	systemcvpc/hscd_vpc_Director.h \
	systemcvpc/hscd_vpc_PriorityScheduler.h \
	systemcvpc/hscd_vpc_Tracing.h \
	systemcvpc/FlexRayScheduler.h \
	systemcvpc/hscd_vpc_EDFController.h \
	systemcvpc/hscd_vpc_ProcessControlBlock.h \
	systemcvpc/hscd_vpc_VPCBuilder.h \
	systemcvpc/hscd_vpc_AbstractComponent.h \
	systemcvpc/hscd_vpc_EventPair.h \
	systemcvpc/hscd_vpc_ProcessEventListener.h \
	systemcvpc/hscd_vpc_VpcDomErrorHandler.h \
	systemcvpc/hscd_vpc_AbstractController.h \
	systemcvpc/hscd_vpc_FCFSController.h \
	systemcvpc/hscd_vpc_RateMonotonicScheduler.h \
	systemcvpc/hscd_vpc_XmlHelper.h \
	systemcvpc/hscd_vpc_AbstractDirector.h \
	systemcvpc/hscd_vpc_FCFSScheduler.h \
	systemcvpc/hscd_vpc_ReconfigurableComponent.h \
	systemcvpc/TDMAScheduler.h \
	systemcvpc/hscd_vpc_Component.h \
	systemcvpc/hscd_vpc_IDeallocatable.h \
	systemcvpc/hscd_vpc_RoundRobinController.h \
	systemcvpc/hscd_vpc_Configuration.h \
	systemcvpc/hscd_vpc_InvalidArgumentException.h \
	systemcvpc/hscd_vpc_RoundRobinScheduler.h \
	systemcvpc/hscd_vpc_Controller.h \
	systemcvpc/hscd_vpc_PCBPool.h \
	systemcvpc/hscd_vpc_Scheduler.h
