## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS =				\
	systemcvpc/vpc_config.h \
	\
	systemcvpc/Attribute.h 				\
	systemcvpc/BlockingTransport.h 			\
	systemcvpc/ComponentInfo.h 			\
	systemcvpc/ComponentModel.h 			\
	systemcvpc/ComponentObserver.h 			\
	systemcvpc/debug_config.h 			\
	systemcvpc/debug.h 				\
	systemcvpc/debug_off.h 				\
	systemcvpc/debug_on.h 				\
	systemcvpc/Delayer.h 				\
	systemcvpc/FastLink.h 				\
	systemcvpc/FCFSComponent.h 			\
	systemcvpc/FlexRayScheduler.h 			\
	systemcvpc/FunctionTimingPool.h 		\
	systemcvpc/hscd_vpc_AbstractComponent.h 	\
	systemcvpc/hscd_vpc_Component.h 		\
	systemcvpc/hscd_vpc_datatypes.h 		\
	systemcvpc/hscd_vpc_Director.h 			\
	systemcvpc/hscd_vpc_EventPair.h 		\
	systemcvpc/hscd_vpc_FCFSScheduler.h 		\
	systemcvpc/hscd_vpc_InvalidArgumentException.h	\
	systemcvpc/hscd_vpc_PriorityScheduler.h 	\
	systemcvpc/hscd_vpc_PrioritySchedulerNoPreempt.h	\
	systemcvpc/hscd_vpc_ProcessControlBlock.h 	\
	systemcvpc/hscd_vpc_ProcessEventListener.h	\
	systemcvpc/hscd_vpc_RateMonotonicScheduler.h	\
	systemcvpc/hscd_vpc_RoundRobinScheduler.h 	\
	systemcvpc/hscd_vpc_Scheduler.h			\
	systemcvpc/hscd_vpc_Tracing.h 			\
	systemcvpc/hscd_vpc_VPCBuilder.h 		\
	systemcvpc/hscd_vpc_VpcDomErrorHandler.h 	\
	systemcvpc/PCBPool.h 				\
	systemcvpc/Pool.h 				\
	systemcvpc/PowerGovernor.h 			\
	systemcvpc/PowerMode.h 				\
	systemcvpc/PowerSumming.h 			\
	systemcvpc/Route.h 				\
	systemcvpc/RoutePool.h 				\
	systemcvpc/StaticRoute.h 			\
	systemcvpc/Task.h 				\
	systemcvpc/TaskPool.h 				\
	systemcvpc/TDMAScheduler.h 			\
	systemcvpc/TimeTriggeredCCScheduler.h 		\
	systemcvpc/Timing.h				\
	systemcvpc/dynload/dll.h			\
	systemcvpc/dynload/world.h
