## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS =				\
	vpc.hpp					 	\
	systemcvpc/vpc_config.h 			\
							\
	systemcvpc/Attribute.hpp 			\
	systemcvpc/BlockingTransport.hpp 		\
	systemcvpc/ComponentInfo.hpp 			\
	systemcvpc/ComponentModel.hpp 			\
	systemcvpc/ComponentObserver.hpp 		\
	systemcvpc/debug_config.hpp 			\
	systemcvpc/debug.hpp 				\
	systemcvpc/debug_off.hpp 			\
	systemcvpc/debug_on.hpp 			\
	systemcvpc/Delayer.hpp 				\
	systemcvpc/FastLink.hpp 			\
	systemcvpc/NonPreemptiveComponent.hpp 	\
	systemcvpc/FlexRayScheduler.hpp 		\
	systemcvpc/FunctionTimingPool.hpp 		\
	systemcvpc/AbstractComponent.hpp 		\
	systemcvpc/datatypes.hpp 			\
	systemcvpc/Director.hpp 			\
	systemcvpc/EventPair.hpp 			\
	systemcvpc/FCFSScheduler.hpp 			\
	systemcvpc/InvalidArgumentException.hpp		\
	systemcvpc/PriorityScheduler.hpp 		\
	systemcvpc/PrioritySchedulerNoPreempt.hpp	\
	systemcvpc/ProcessControlBlock.hpp 		\
	systemcvpc/RateMonotonicScheduler.hpp		\
	systemcvpc/RoundRobinScheduler.hpp 		\
	systemcvpc/Scheduler.hpp			\
	systemcvpc/Tracing.hpp 				\
	systemcvpc/VPCBuilder.hpp 			\
	systemcvpc/VpcDomErrorHandler.hpp 		\
	systemcvpc/PCBPool.hpp 				\
	systemcvpc/PluggablePowerGovernor.hpp		\
	systemcvpc/Pool.hpp 				\
	systemcvpc/PowerGovernor.hpp 			\
	systemcvpc/PowerMode.hpp 			\
	systemcvpc/PowerSumming.hpp 			\
	systemcvpc/Route.hpp 				\
	systemcvpc/RoutePool.hpp 			\
	systemcvpc/StaticRoute.hpp 			\
	systemcvpc/ScheduledTask.hpp 		\
	systemcvpc/Task.hpp 				\
	systemcvpc/TaskPool.hpp 			\
	systemcvpc/TDMAScheduler.hpp 			\
	systemcvpc/TimeTriggeredCCScheduler.hpp 	\
	systemcvpc/Timing.hpp				\
	systemcvpc/dynload/dll.hpp			\
	systemcvpc/dynload/world.hpp
